name:                blockchain-parser
version:             0.1.0.0
synopsis:            Blockchain parser
description:         Please see README.md
homepage:            http://github.com/cmahon/blockchain-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Mahon
maintainer:          cnmahon@gmail.com
copyright:           Copyright (c) 2016 Chris Mahon
category:            tbc
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bitcoin.Bitcoind
                       Bitcoin.Types
                       Client
                       Types
                       Util
  ghc-options:         -Wall -fno-warn-orphans
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bitcoin-block
                     , bitcoin-types
                     , bitcoin-tx
                     , containers
                     , bytestring
                     , deepseq
                     , directory
                     , filepath
                     , hexstring
                     , lens-family-core
                     , optparse-applicative
                     , pipes
                     , pipes-binary
                     , pipes-bytestring
                     , pipes-parse
                     , pipes-safe
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       LambdaCase
                       MultiWayIf
                       TupleSections
                       RankNTypes
                       RecordWildCards

executable blockchain-parser
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , binary
                     , bitcoin-block
                     , bitcoin-tx
                     , bitcoin-types
                     , blockchain-parser
                     , bytestring
                     , containers
                     , deepseq
                     , directory
                     , foldl
                     , hexstring
                     , optparse-applicative
                     , pipes
                     , pipes-binary
                     , pipes-bytestring
                     , pipes-parse
                     , pipes-safe
  default-language:    Haskell2010

test-suite blockchain-parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blockchain-parser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cmahon/blockchain-parser
